# AdvKit

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.cfg  source.pptx
advlib/: CMakeLists.txt  README.md  advlib.h  advlib.hpp  base_attacker.cpp  base_attacker.hpp  base_config.hpp  data.hpp  functions.hpp  main.cpp  model.hpp  set_config.hpp  utils.hpp
advlib/attack/: CMakeLists.txt  get_attacker.hpp  get_config.hpp  set_config.hpp
advlib/attack/blackbox/: superpixel_attack.hpp
advlib/attack/whitebox/: fgsm.cpp  fgsm.hpp
advlib/cmake/: libtorch.cmake
advlib/selector/: attacker.cpp  attacker.hpp  config.cpp  config.hpp
advlib/src/: CMakeLists.txt  main.cpp  test.cpp
advlib/src/attacker/: CMakeLists.txt  fgsm.hpp
advlib/src/base/: CMakeLists.txt  attacker.hpp  config.hpp
advlib/src/config/: fgsm.hpp
advlib/src/selector/: CMakeLists.txt
attackers_info/white-box/: fgsm.json
cmake/: AdvLibConfig.cmake  DownloadCifar10.cmake  DownloadTestModel.cmake  FetchOpenCV.cmake  FetchTorch.cmake
config/blackbox/: acc_sign_hunter.toml  parsimonious_attack.toml  saliency_attack.toml  sign_hunter.toml  square_attack.toml  superpixel_attack.toml
config/whitebox/: fgsm.toml
docs/: CMakeLists.txt
include/: advlib.hpp
pyadv/: __init__.py  __main__.py  base.py  base_attacker.py  base_config.py  criterion.py  data.py  model.py  utils.py
pyadv/attack/: __init__.py  set_config.py
pyadv/attack/blackbox/: __init__.py  superpixel_attack.py
pyadv/attack/whitebox/: __init__.py  fgsm.py  i-fgsm.py  iterative_fgsm.py
pyadv/attack/whitebox/core/: __init__.py  initial_point.py  projection.py
pyadv/attacker/: __init__.py
pyadv/attacker/black-box/: __init__.py  saliency_attack.py
pyadv/attacker/blackbox/: acc_sign_hunter.py  parsimonious_attack.py
pyadv/base/: attacker.py  criterion.py
pyadv/model/: __init__.py
src/: base_attacker.hpp  base_config.cpp  base_config.hpp  data.cpp  data.hpp  model.cpp  model.hpp  utils.cpp  utils.hpp
storage/: example_config.yaml
tests/: config.toml  test_config.py  test_fgsm.cpp
tests/advlib/: CMakeLists.txt
tests/advlib/attack/whitebox/: test_fgsm.cpp
tests/attack/whitebox/: test_fgsm.py  test_ifgsm.py
tests/data/: config.yaml
tests/example/: config.yaml  download_model.py  download_test_model.py  test_model.py
tests/pyadv/: test_utils.py
tests/pyadv/attack/whitebox/: test_fgsm.py  test_ifgsm.py
tests/storage/: config.json  config.toml  config.yaml
