cmake_minimum_required(VERSION 3.5)
cmake_policy(SET CMP0135 NEW)
enable_language(CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(test_AdvLib)
add_compile_options(-O2 -Wall -Wextra)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
list(APPEND CMAKE_PREFIX_PATH ${CMAKE_SOURCE_DIR})
find_package(AdvLib REQUIRED)
include(${CMAKE_SOURCE_DIR}/cmake/DownloadTestModel.cmake)
add_executable(test_fgsm.exe ${CMAKE_SOURCE_DIR}/tests/test_fgsm.cpp)
target_link_libraries(test_fgsm.exe advlib)
