[metadata]
name = pyadv
version = 0.1.0
description = cpp/python implementation for adversarial attack
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = oe1307
author_email = oe.issa.392@s.kyushu-u.ac.jp
classifiers =
    Development Status :: 0.1.0
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
packages = find:
install_requires =
    torch
    torchvision
    robustbench@git+https://github.com/RobustBench/robustbench.git
