[metadata]
name = pyadv
version = 0.1.0
description = cpp/python implementation for adversarial attack
license = MIT

[options]
python_requires = >=3.11
packages = find:
install_requires =
    torch
    torchvision
    robustbench@git+https://github.com/RobustBench/robustbench.git

[options.extras_require]
dev =
    matplotlib

